--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "firebase": "^3.7.2",
     "react": "~15.4.1",
     "react-native": "0.42.3",
-    "react-native-gifted-messenger": "^0.1.4"
+    "react-native-gifted-messenger": "^0.1.4",
+    "react-native-tabs": "^1.0.9"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
